[package]
edition = "2021"
name = "tonnage"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.57"
chrono = {version = "0.4", features = ["serde"]}
desire = {path = '../desire'}
rusqlite = {version = "0.28.0", features = ["chrono", "serde_json"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
