[package]
edition = "2021"
name = "tonnage"
version = "0.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1.57"
chrono = {version = "0.4", features = ["serde"]}
desire = {git = 'https://github.com/desire-rs/desire', branch = "develop"}
dotenv = "0.15.0"
hex-literal = "0.3.4"
jsonwebtoken = "8.1.1"
once_cell = "1.13.1"
rusqlite = {version = "0.28.0", features = ["chrono", "serde_json"]}
serde = {version = "1.0.145", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10.6"
thiserror = "1"
tokio = {version = "1", features = ["full"]}
tokio-stream = "0.1.10"
tracing = "0.1"
tracing-subscriber = "0.3"
